Prevent background overflowing TimeText
Currently TimedText sometimes uses a bigger font-size but not a bigger
line-height. This sometimes causes TimedText's background to clash with
the text resulting in horizontally cut-off texts.

This issue will be resolved with this patch.

Bug: 54901

--- a/MwEmbedModules/TimedText/resources/mw.style.TimedText.css
+++ b/MwEmbedModules/TimedText/resources/mw.style.TimedText.css
@@ -1,4 +1,4 @@
-.track span {
+.ttmlStyled {
 	color: white;
 	letter-spacing: 0.04em;
 	text-align: center;
@@ -9,11 +9,10 @@
 	*/
 	background-color: #333;
 }
-.track span a {
+.ttmlStyled a {
 	text-decoration: none;
 	color : #BBF;
 }
-.track span a:visited{
+.ttmlStyled a:visited{
 	color : #BBF;
 }
-
